--- a/p_lang/java_concepts/aot-annotations/pom.xml
+++ b/p_lang/java_concepts/aot-annotations/pom.xml
@@ -16,6 +16,7 @@
             <groupId>com.google.auto.service</groupId>
             <artifactId>auto-service</artifactId>
             <version>1.1.1</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
